se agrego hhasta recolectores simples